Update Finance group project.ipynb

--- a/Finance group project.ipynb
+++ b/Finance group project.ipynb
@@ -41,9 +41,11 @@
         "df[\"date\"] = df[\"date\"].dt.to_period(\"M\").dt.to_timestamp()\n",
         "\n",
         "# Compute EPS surprise\n",
-        "eps_stdevest_adj = df[\"eps_stdevest\"].fillna(1e-6).replace(0, 1e-6)\n",
-        "df[\"eps_surprise\"] = (df[\"eps_actual\"] - df[\"eps_meanest\"]) / eps_stdevest_adj\n",
-        "df = df.dropna(subset=[\"eps_surprise\"] + factors)\n",
+        "\n",
+        "df[\"eps_stdevest\"] = df[\"eps_stdevest\"].fillna(1e-6).replace(0, 1e-6)\n",
+        "df[\"eps_surprise_std\"] = (df[\"eps_actual\"] - df[\"eps_meanest\"]) / df[\"eps_stdevest\"]\n",
+        "\n",
+        "df = df.dropna(subset=[\"eps_surprise_std\"] + factors)\n",
         "\n",
         "# === Step 2: Expanding Window with Bayesian Optimization ===\n",
         "results = []\n",
