Update Finance group project_v2.ipynb

--- a/Finance group project_v2.ipynb
+++ b/Finance group project_v2.ipynb
@@ -1,19 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "machine_shape": "hm"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -43,9 +28,9 @@
         "# Compute EPS surprise\n",
         "\n",
         "df[\"eps_stdevest\"] = df[\"eps_stdevest\"].fillna(1e-6).replace(0, 1e-6)\n",
-        "df[\"eps_surprise_std\"] = (df[\"eps_actual\"] - df[\"eps_meanest\"]) / df[\"eps_stdevest\"]\n",
+        "df[\"eps_surprise\"] = (df[\"eps_actual\"] - df[\"eps_meanest\"]) / df[\"eps_stdevest\"]\n",
         "\n",
-        "df = df.dropna(subset=[\"eps_surprise_std\"] + factors)\n",
+        "df = df.dropna(subset=[\"eps_surprise\"] + factors)\n",
         "\n",
         "# === Step 2: Expanding Window with Bayesian Optimization ===\n",
         "results = []\n",
@@ -126,5 +111,20 @@
         "\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "machine_shape": "hm",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
