Update Finance group project_v2.ipynb

--- a/Finance group project_v2.ipynb
+++ b/Finance group project_v2.ipynb
@@ -20,15 +20,15 @@
         "warnings.filterwarnings(\"ignore\")\n",
         "\n",
         "# === Step 1: Load Data ===\n",
-        "df = pd.read_csv(\"goup_project_sample_v3.csv\", parse_dates=[\"date\"])\n",
+        "df = pd.read_csv(\"mma_sample_v2.csv\", parse_dates=[\"date\"])\n",
         "factors = pd.read_csv(\"factor_char_list.csv\")[\"variable\"].tolist()\n",
         "\n",
         "df[\"date\"] = df[\"date\"].dt.to_period(\"M\").dt.to_timestamp()\n",
         "\n",
         "# Compute EPS surprise\n",
-        "\n",
         "df[\"eps_stdevest\"] = df[\"eps_stdevest\"].fillna(1e-6).replace(0, 1e-6)\n",
         "df[\"eps_surprise\"] = (df[\"eps_actual\"] - df[\"eps_meanest\"]) / df[\"eps_stdevest\"]\n",
+        "df[\"eps_surprise\"] = df[\"eps_surprise\"].clip(-10, 10)\n",
         "\n",
         "df = df.dropna(subset=[\"eps_surprise\"] + factors)\n",
         "\n",
